--- a/tools.html
+++ b/tools.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <title>Coating & Painting Inspection Tools | Md Jakir Hossain</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Coating & painting inspection tools used by BGAS-CSWIP certified coating inspector Md Jakir Hossain – DFT gauge, holiday detector, surface profile gauge and more.">
+  <meta name="description" content="Detailed list of Elcometer coating inspection tools used by BGAS-CSWIP certified coating inspector Md Jakir Hossain – with descriptions and images.">
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      max-width: 900px;
+      max-width: 960px;
       margin: 0 auto;
       padding: 24px 16px 48px;
       line-height: 1.6;
@@ -25,21 +25,36 @@
     .tool-card {
       background: #ffffff;
       padding: 16px 18px;
-      margin-bottom: 16px;
+      margin-bottom: 18px;
       border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(15, 23, 42, 0.07);
+      box-shadow: 0 4px 12px rgba(15, 23, 42, 0.08);
+    }
+    .tool-card h2 {
+      margin-top: 0;
+      margin-bottom: 6px;
+    }
+    .model {
+      font-size: 0.9rem;
+      color: #64748b;
+      margin-bottom: 6px;
+    }
+    .tool-meta {
+      font-size: 0.85rem;
+      color: #94a3b8;
+      margin-bottom: 8px;
     }
     .tool-card img {
       max-width: 100%;
       border-radius: 8px;
       margin-top: 10px;
+      border: 1px solid #e5e7eb;
     }
     .section-title {
       margin-top: 32px;
       margin-bottom: 8px;
       border-left: 4px solid #2563eb;
       padding-left: 8px;
-      font-size: 1.1rem;
+      font-size: 1.15rem;
     }
     ul {
       padding-left: 20px;
@@ -66,72 +81,260 @@
   </style>
 </head>
 <body>
+
   <h1>Coating &amp; Painting Inspection Tools</h1>
   <p class="tagline">
-    Curated tool list used by <strong>Md Jakir Hossain – BGAS-CSWIP Grade-II Painting Inspector &amp; NDT Level-2</strong>.
+    Professional Elcometer inspection tools used by <strong>Md Jakir Hossain – BGAS-CSWIP Grade-II Painting Inspector &amp; NDT Level-II</strong>.
   </p>
 
+  <!-- THICKNESS & PROFILE GAUGES -->
+  <h3 class="section-title">📏 Thickness &amp; Surface Profile Gauges</h3>
+
   <div class="tool-card">
-    <h2>📏 Dry Film Thickness (DFT) Gauge <span class="badge">Key Instrument</span></h2>
+    <h2>Elcometer 456 Coating Thickness Gauge <span class="badge">DFT Gauge</span></h2>
+    <p class="model">Model: Elcometer 456 – Digital Dry Film Thickness Gauge</p>
     <p>
-      Used to measure <strong>cured coating thickness</strong> on steel structures, pipelines, tanks and equipment to verify
-      compliance with project specifications and ISO / SSPC / NACE requirements.
+      Industry-standard <strong>dry film thickness (DFT)</strong> gauge for measuring coating thickness on
+      <strong>ferrous and non-ferrous substrates</strong>. Available in separate and integral probe versions,
+      it offers fast readings (70+ per minute), large memory and Bluetooth/USB connectivity to ElcoMaster®
+      for professional reporting.
     </p>
-    <img src="Images/dft-gauge.jpg" alt="Dry Film Thickness (DFT) Gauge used for coating inspection">
+    <p class="tool-meta">Typical Use: Final DFT acceptance, QA/QC reporting, ISO/SSPC/NACE compliance.</p>
+    <img src="Images/elcometer-456.jpg" alt="Elcometer 456 coating thickness gauge measuring dry film thickness on steel">
   </div>
 
   <div class="tool-card">
-    <h2>⚡ Holiday Detector / Spark Tester</h2>
+    <h2>Elcometer 224 Digital Surface Profile Gauge</h2>
+    <p class="model">Model: Elcometer 224 – Digital Surface Profile Gauge</p>
     <p>
-      Detects <strong>pinholes, holidays, discontinuities and leaks</strong> in protective coatings on tanks, pipelines and
-      buried structures – especially for high-build and lining systems.
+      Digital gauge for measuring <strong>surface profile (anchor pattern)</strong> on blasted steel,
+      both flat and curved. Provides fast and repeatable profile readings with internal memory and
+      data output for traceable surface preparation records.
     </p>
-    <img src="Images/holiday-detector.jpg" alt="Holiday detector used for coating holiday testing">
+    <p class="tool-meta">Typical Use: Confirming surface profile after abrasive blasting prior to coating.</p>
+    <img src="Images/elcometer-224.jpg" alt="Elcometer 224 digital surface profile gauge on blasted steel surface">
   </div>
 
   <div class="tool-card">
-    <h2>🔍 Surface Profile Gauge / Comparator</h2>
+    <h2>Elcometer 124 Thickness Gauge</h2>
+    <p class="model">Model: Elcometer 124 – Replica Tape Thickness Gauge</p>
     <p>
-      Measures <strong>surface roughness</strong> after abrasive blasting to ensure the correct anchor pattern for coating
-      adhesion. Often used with ISO 8503 / SSPC visual comparators.
+      Mechanical gauge used with <strong>Elcometer 122 Testex® Replica Tape</strong> to determine
+      the <strong>peak-to-valley height</strong> of the abrasive blast profile. Available in metric and
+      imperial versions with high resolution scale for accurate surface profile measurement.
     </p>
-    <img src="Images/surface-profile.jpg" alt="Surface profile gauge used for blasting profile measurement">
+    <p class="tool-meta">Typical Use: Surface profile verification using replica tape (ASTM D4417-C, ISO 8503-5).</p>
+    <img src="Images/elcometer-124.jpg" alt="Elcometer 124 thickness gauge used with replica tape">
   </div>
 
-  <h3 class="section-title">🔹 Surface Preparation Tools</h3>
-  <ul>
-    <li>ISO 8501 visual standards (Sa 2, Sa 2½, Sa 3 etc.)</li>
-    <li>SSPC visual standards</li>
-    <li>Surface roughness comparator (grit / shot)</li>
-    <li>Blast pressure gauge</li>
-    <li>Surface cleanliness &amp; dust test kits</li>
-  </ul>
+  <!-- CLIMATE & DEW POINT -->
+  <h3 class="section-title">🌦 Climate &amp; Dew Point Monitoring</h3>
 
-  <h3 class="section-title">🌦 Environmental Monitoring</h3>
-  <ul>
-    <li>Hygrometer / dew point meter</li>
-    <li>Relative humidity (RH) meter</li>
-    <li>Infrared thermometer</li>
-    <li>Anemometer (wind speed)</li>
-  </ul>
+  <div class="tool-card">
+    <h2>Elcometer 319 Dew Point Meter</h2>
+    <p class="model">Model: Elcometer 319 – Dewpoint / Climate Meter</p>
+    <p>
+      Rugged multi-parameter <strong>climate meter</strong> designed to measure and record
+      <strong>air temperature, surface temperature, relative humidity, dew point, ΔT and dry bulb temperature</strong>.
+      Stores data for long-term monitoring and connects to ElcoMaster® for reporting.
+    </p>
+    <p class="tool-meta">Typical Use: Checking if climatic conditions are suitable for painting and curing.</p>
+    <img src="Images/elcometer-319.jpg" alt="Elcometer 319 dew point meter used for climate monitoring before coating">
+  </div>
 
-  <h3 class="section-title">🎨 Application &amp; Testing</h3>
-  <ul>
-    <li>Wet film thickness (WFT) gauge</li>
-    <li>Viscosity cups (Ford / Zahn)</li>
-    <li>Cross-hatch cutter</li>
-    <li>Pull-off adhesion tester</li>
-    <li>Gloss meter &amp; hardness testers</li>
-    <li>Chloride / salt contamination test kits (Bresle)</li>
-  </ul>
+  <!-- HOLIDAY / POROSITY DETECTION -->
+  <h3 class="section-title">⚡ Holiday &amp; Porosity Detection</h3>
 
-  <h3 class="section-title">📝 Documentation &amp; QA/QC</h3>
-  <ul>
-    <li>Daily coating log sheets</li>
-    <li>ITPs, MIRs, NCRs and inspection reports</li>
-    <li>Calibration certificates for all instruments</li>
-  </ul>
+  <div class="tool-card">
+    <h2>Elcometer 270 Pinhole Detector (Low Voltage)</h2>
+    <p class="model">Model: Elcometer 270 – Wet Sponge Pinhole Detector</p>
+    <p>
+      Low voltage <strong>wet sponge pinhole detector</strong> for identifying pinholes and
+      discontinuities in <strong>thin, insulating coatings (&lt; 500µm)</strong> on conductive
+      substrates. Uses a moist sponge to detect through-film defects without damaging the coating.
+    </p>
+    <p class="tool-meta">Typical Use: Pinhole testing on powder coatings and thin protective coatings.</p>
+    <img src="Images/elcometer-270.jpg" alt="Elcometer 270 low voltage wet sponge pinhole detector">
+  </div>
+
+  <div class="tool-card">
+    <h2>Elcometer 280 Pulsed DC Holiday Detector (High Voltage)</h2>
+    <p class="model">Model: Elcometer 280 – Pulsed DC Holiday Detector</p>
+    <p>
+      High voltage <strong>pulsed DC holiday detector</strong> for locating holidays, pinholes and
+      voids in <strong>thick coatings and linings</strong>, even on slightly damp or dirty surfaces.
+      Features advanced safety, adjustable test voltage and a wide range of electrodes for various geometries.
+    </p>
+    <p class="tool-meta">Typical Use: Holiday testing of tank linings, buried pipelines and high-build systems.</p>
+    <img src="Images/elcometer-280.jpg" alt="Elcometer 280 high voltage holiday detector inspecting protective coating">
+  </div>
+
+  <!-- SALT / SURFACE CLEANLINESS -->
+  <h3 class="section-title">🧪 Surface Cleanliness &amp; Salt Testing</h3>
+
+  <div class="tool-card">
+    <h2>Elcometer 134 CSN Chloride, Sulphate &amp; Nitrate Test Kit</h2>
+    <p class="model">Model: Elcometer 134 CSN – ‘CSN Salts’ Test Kit</p>
+    <p>
+      Field kit designed to accurately measure <strong>surface chlorides, sulphates and nitrates</strong>
+      in minutes. All components are <strong>pre-dosed and pre-measured</strong>, so the inspector can
+      quickly determine soluble salt contamination with results in ppm or µg/cm².
+    </p>
+    <p class="tool-meta">Typical Use: Salt contamination checks before coating to avoid osmotic blistering and failure.</p>
+    <img src="Images/elcometer-134-csn.jpg" alt="Elcometer 134 CSN salt contamination test kit for chloride, sulphate and nitrate">
+  </div>
+
+  <div class="tool-card">
+    <h2>Elcometer 128 Pictorial Surface Standards</h2>
+    <p class="model">Model: Elcometer 128 – Pictorial Surface Cleanliness Standards</p>
+    <p>
+      High quality <strong>photographic plates</strong> used as visual reference to assess the
+      <strong>cleanliness and preparation condition</strong> of steel surfaces. Includes ISO 8501-1,
+      ISO 8501-4 and SSPC VIS 1–5 references for comparision after blasting or power tool cleaning.
+    </p>
+    <p class="tool-meta">Typical Use: Visual confirmation of Sa / St grades and surface condition before coating.</p>
+    <img src="Images/elcometer-128-pictorial-surface-cleaniness.jpg" alt="Elcometer 128 pictorial surface standards showing blast cleanliness grades">
+  </div>
+
+  <!-- ADHESION TESTERS -->
+  <h3 class="section-title">🧲 Adhesion Testing</h3>
+
+  <div class="tool-card">
+    <h2>Elcometer 510 Automatic Pull-Off Hydraulic Adhesion Gauge</h2>
+    <p class="model">Model: Elcometer 510 – Automatic Pull-Off Adhesion Tester</p>
+    <p>
+      Automatic hydraulic <strong>pull-off adhesion gauge</strong> that measures the bond strength
+      between coating and substrate. The gauge automatically controls the <strong>pull rate</strong>
+      for consistent and repeatable results, with on-screen statistics, trend graphs and Bluetooth/USB
+      data transfer to ElcoMaster®.
+    </p>
+    <p class="tool-meta">Typical Use: Adhesion qualification of protective coatings on steel, concrete and other substrates.</p>
+    <img src="Images/elcometer-510.jpg" alt="Elcometer 510 automatic pull-off adhesion gauge with dollies">
+  </div>
+
+  <div class="tool-card">
+    <h2>Elcometer 107 Cross Hatch Cutter</h2>
+    <p class="model">Model: Elcometer 107 – Cross-Cut / Cross-Hatch Adhesion Cutter</p>
+    <p>
+      Manual <strong>cross hatch cutter</strong> providing an instant assessment of coating adhesion
+      by making a lattice pattern through the coating to the substrate. Rugged body, non-slip grip
+      and <strong>interchangeable 4-sided blades</strong> allow testing of a wide range of coating thicknesses.
+    </p>
+    <p class="tool-meta">Typical Use: Cross-hatch adhesion classification as per ISO / ASTM / BS standards.</p>
+    <img src="Images/elcometer-107.jpg" alt="Elcometer 107 cross hatch cutter performing adhesion test">
+  </div>
+
+  <!-- GLOSS, FINENESS, DENSITY, VISCOSITY -->
+  <h3 class="section-title">✨ Gloss, Dispersion, Density &amp; Viscosity</h3>
+
+  <div class="tool-card">
+    <h2>Elcometer 480 Glossmeter</h2>
+    <p class="model">Model: Elcometer 480 – Single / Dual / Triple Angle Glossmeter</p>
+    <p>
+      High-precision <strong>glossmeter</strong> for measuring <strong>gloss, % reflectance and haze</strong>
+      on high, semi-gloss and matt surfaces. Can measure multiple angles (20°/60°/85°) simultaneously,
+      with fast reading rate and excellent inter-instrument agreement for reliable QC.
+    </p>
+    <p class="tool-meta">Typical Use: Measuring gloss level of coatings, automotive finishes and industrial paints.</p>
+    <img src="Images/elcometer-480.jpg" alt="Elcometer 480 glossmeter measuring gloss on coated panel">
+  </div>
+
+  <div class="tool-card">
+    <h2>Elcometer 2020 Fineness of Grind Gauges</h2>
+    <p class="model">Model: Elcometer 2020 – Fineness of Grind Gauge</p>
+    <p>
+      Precision stainless steel gauge with graded grooves used to determine the <strong>particle size
+      and fineness of grind</strong> of paints, pigments, inks, coatings, chocolates and similar products.
+      Available in various ranges (µm / mils) with certified versions for laboratory use.
+    </p>
+    <p class="tool-meta">Typical Use: Checking dispersion quality and pigment grind during paint formulation.</p>
+    <img src="Images/elcometer-2020.jpg" alt="Elcometer 2020 fineness of grind gauge with scraper">
+  </div>
+
+  <div class="tool-card">
+    <h2>Elcometer 1800 Density Cup</h2>
+    <p class="model">Model: Elcometer 1800 – Stainless Steel Density Cup (Pycnometer)</p>
+    <p>
+      Stainless steel precision <strong>density cup (pycnometer)</strong> used to determine the
+      <strong>specific gravity or density</strong> of paints and similar liquids. Provides highly repeatable
+      volume for accurate density calculation.
+    </p>
+    <p class="tool-meta">Typical Use: Determining paint density for formulation, QC and viscosity correlation.</p>
+    <img src="Images/elcometer-1800-density-cups.jpg" alt="Elcometer 1800 stainless steel density cups">
+  </div>
+
+  <div class="tool-card">
+    <h2>Elcometer 2351 FORD / ASTM Viscosity Flow Cups</h2>
+    <p class="model">Model: Elcometer 2351 – FORD / ASTM Viscosity Cups</p>
+    <p>
+      Anodised aluminium <strong>viscosity flow cups</strong> with stainless steel orifice designed to
+      measure the <strong>consistency and flow time</strong> of paints, varnishes and related products.
+      Results are usually expressed as seconds flow time and can be converted to cSt when required.
+    </p>
+    <p class="tool-meta">Typical Use: Setting spray viscosity for correct atomisation and film build.</p>
+    <img src="Images/elcometer-2351-astm-flow-cup.jpg" alt="Elcometer 2351 FORD ASTM viscosity flow cups">
+  </div>
+
+  <!-- APPLICATION & FILM PREPARATION -->
+  <h3 class="section-title">🎨 Film Application &amp; Sample Preparation</h3>
+
+  <div class="tool-card">
+    <h2>Elcometer 4340 Motorised / Automatic Film Applicator</h2>
+    <p class="model">Model: Elcometer 4340 – Motorised Film Applicator</p>
+    <p>
+      Laboratory <strong>motorised film applicator</strong> used to produce highly reproducible
+      wet films of coatings on various substrates (contrast charts, metal panels, glass, foils).
+      Heavy base, precision table and adjustable traverse speed minimise vibration and ensure
+      consistent film thickness.
+    </p>
+    <p class="tool-meta">Typical Use: Preparing test panels for gloss, color, opacity, drying time and other lab tests.</p>
+    <img src="Images/elcometer-4340-motorised-film-applicator.jpg" alt="Elcometer 4340 motorised automatic film applicator">
+  </div>
+
+  <!-- PERMEABILITY & DRYING -->
+  <h3 class="section-title">💨 Permeability &amp; Drying</h3>
+
+  <div class="tool-card">
+    <h2>Elcometer 5100 Payne Permeability Cup</h2>
+    <p class="model">Model: Elcometer 5100 – Payne Permeability Cups</p>
+    <p>
+      Anodised aluminium <strong>permeability cups</strong> used to determine the
+      <strong>permeability or vapour transmission rate</strong> of unsupported films such as paints,
+      varnishes, plastics and paper. Weight change over time is used to calculate permeance.
+    </p>
+    <p class="tool-meta">Typical Use: Evaluating barrier properties and drying behaviour of coating films.</p>
+    <img src="Images/elcometer-5100-permeability-cup_3.jpg" alt="Elcometer 5100 Payne permeability cup with film">
+  </div>
+
+  <!-- MECHANICAL / SCRATCH / BEND TESTING -->
+  <h3 class="section-title">🔧 Mechanical Resistance, Scratch &amp; Bend Testing</h3>
+
+  <div class="tool-card">
+    <h2>Elcometer 3000 Motorised Clemen Unit</h2>
+    <p class="model">Model: Elcometer 3000 – Motorised Clemen Scratch Tester</p>
+    <p>
+      Robust motorised instrument for evaluating the <strong>scratch resistance</strong> of coated surfaces.
+      A tool with a hemispherical tip is gradually loaded and drawn across the sample to determine
+      the load at which the coating fails. Suitable for metal, wood, glass, plastic and other hard materials.
+    </p>
+    <p class="tool-meta">Typical Use: Scratch resistance and mar resistance testing of coatings.</p>
+    <img src="Images/elcometer-3000-motorised-intro-image.jpg" alt="Elcometer 3000 motorised Clemen unit performing scratch test">
+  </div>
+
+  <div class="tool-card">
+    <h2>Elcometer 1510 Conical Mandrel Bend Tester</h2>
+    <p class="model">Model: Elcometer 1510 – Conical Mandrel Bend Tester</p>
+    <p>
+      Mechanical <strong>conical mandrel bend tester</strong> used to determine the effects of bending
+      on the <strong>elasticity, adhesion and elongation</strong> of cured coatings on sheet metal.
+      The panel is bent around a conical mandrel; the diameter at which cracking starts is recorded.
+    </p>
+    <p class="tool-meta">Typical Use: Flexibility and elongation testing of coatings for pipelines, tanks and cladding.</p>
+    <img src="Images/elcometer-1510-Conical-Mandrel-Bend-Tester-in-use.jpg" alt="Elcometer 1510 conical mandrel bend tester in use">
+  </div>
 
   <a class="back-link" href="index.html">← Back to main portfolio</a>
+
 </body>
 </html>
+
