Update and rename tools.html to inspection.html

--- a/inspection.html
+++ b/inspection.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Coating & Painting Inspection Tools | Md Jakir Hossain</title>
+  <title>Inspection Tools | Md Jakir Hossain</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Detailed list of Elcometer coating inspection tools used by BGAS-CSWIP certified coating inspector Md Jakir Hossain – with descriptions and images.">
   <style>
@@ -82,7 +82,7 @@
 </head>
 <body>
 
-  <h1>Coating &amp; Painting Inspection Tools</h1>
+  <h1>Inspection Tools</h1>
   <p class="tagline">
     Professional Elcometer inspection tools used by <strong>Md Jakir Hossain – BGAS-CSWIP Grade-II Painting Inspector &amp; NDT Level-II</strong>.
   </p>
