--- a/blasting-tools.html
+++ b/blasting-tools.html
@@ -1,97 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <title>Blasting Tools | Md Jakir Hossain</title>
+  <title>Blasting Tools & Equipment | Md Jakir Hossain</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body{
-      font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       max-width: 900px;
       margin: 0 auto;
       padding: 24px 16px 48px;
-      background:#0b1120;
-      color:#e5e7eb;
-      line-height:1.6;
+      background: #0b1120;
+      color: #e5e7eb;
+      line-height: 1.6;
     }
-    .tool-card{
-      background:#020617;
-      border-radius:12px;
-      padding:16px 20px;
-      margin-bottom:16px;
-      box-shadow:0 4px 18px rgba(15,23,42,0.7);
-      border:1px solid #1f2937;
+
+    h1 {
+      text-align: center;
+      color: #38bdf8;
+      margin-bottom: 25px;
     }
-    .tool-card h2{margin:0 0 4px 0;color:#38bdf8;font-size:1.05rem;}
-    .tool-card p{margin:4px 0 0 0;font-size:0.9rem;color:#9ca3af;}
-    ul{padding-left:18px;font-size:0.9rem;color:#cbd5f5;}
+
+    .tool-card {
+      background: #020617;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 12px;
+      border: 1px solid #1e293b;
+      box-shadow: 0 4px 18px rgba(0, 0, 0, 0.45);
+    }
+
+    .tool-card h2 {
+      margin-top: 0;
+      color: #38bdf8;
+      margin-bottom: 6px;
+      font-size: 1.25rem;
+    }
+
+    .tool-card p {
+      margin-bottom: 10px;
+      color: #b0b7c8;
+    }
+
+    .tool-card img {
+      width: 100%;
+      border-radius: 8px;
+      margin-top: 10px;
+      border: 1px solid #1f2937;
+    }
   </style>
 </head>
+
 <body>
 
-  <h1>💨 Blasting Tools & Setups</h1>
-  <p>Overview of blasting tools and materials I use for surface preparation works.</p>
+  <h1>💨 Blasting Tools & Industrial Equipment</h1>
 
+  <p style="text-align:center; color:#94a3b8; margin-bottom:28px;">
+    Complete list of blasting machines, safety PPE, accessories & abrasive recovery systems used in industrial blasting operations.
+  </p>
+
+  <!-- 1: Sandblasting Machines -->
   <div class="tool-card">
-    <h2>Automatic Blasting Machine</h2>
-    <p>Wheel / automatic blasting machine for structural steel, pipes and plates in workshop.</p>
-    <ul>
-      <li>Continuous conveyor / roller type or hanger type</li>
-      <li>Used for mass production and uniform surface preparation</li>
-    </ul>
+    <h2>1. Sandblasting Machines</h2>
+    <p>
+      Industrial sandblasting machines (blast pots) used for cleaning steel structures with high-pressure abrasive flow.
+      Available in 50L, 100L, 200L sizes with moisture separators, pressure regulators, and safety valves. Suitable for
+      tanks, pipe racks, plant shutdowns & maintenance.
+    </p>
+    <img src="Images/blast-machine.jpg" alt="Sandblasting machine">
   </div>
 
+  <!-- 2: Blasting Accessories -->
   <div class="tool-card">
-    <h2>Manual Blasting Booth (Indoor)</h2>
-    <p>Enclosed blast room with dust extraction and recovery system for manual blasting.</p>
-    <ul>
-      <li>Blast pot, nozzle, deadman handle</li>
-      <li>Abrasive recycling & dust collector</li>
-      <li>Lighting and ventilation system</li>
-    </ul>
+    <h2>2. Blasting Accessories</h2>
+    <p>
+      Includes nozzles, nozzle holders, hose couplings, whip checks, safety pins, moisture separators, blast hoses,
+      air hoses and quick-connect fittings. Essential to maintain pressure, safety, and proper abrasive flow.
+    </p>
+    <img src="Images/blasting-accessories.jpg" alt="Blasting accessories">
   </div>
 
+  <!-- 3: Blast Rooms -->
   <div class="tool-card">
-    <h2>Manual Blasting Setup for Outside Project</h2>
-    <p>Portable field setup used for site structures, tanks, pipe racks and maintenance jobs.</p>
-    <ul>
-      <li>Diesel / electric air compressor</li>
-      <li>Portable blast pot with moisture separator</li>
-      <li>Blast hose, air hose & couplings</li>
-      <li>Deadman switch & nozzle holder</li>
-    </ul>
+    <h2>3. Blast Rooms</h2>
+    <p>
+      Fully enclosed blasting chambers with controlled environment, dust extraction systems, abrasive recycling floors
+      and heavy ventilation. Used for workshop blasting of beams, plates, steel structures & fabrication projects.
+    </p>
+    <img src="Images/blast-room.jpg" alt="Blast room">
   </div>
 
+  <!-- 4: Sandblasting Cabinets -->
   <div class="tool-card">
-    <h2>Abrasive & Consumables</h2>
-    <p>Different abrasives selected as per client specification & surface profile requirement.</p>
-    <ul>
-      <li>Copper slag / coal slag</li>
-      <li>Garnet (different mesh sizes)</li>
-      <li>Steel grit / steel shot (for wheel blasting)</li>
-      <li>Masking tapes & covering materials</li>
-    </ul>
+    <h2>4. Sandblasting Cabinets</h2>
+    <p>
+      Small enclosed cabinets used for blasting valves, tools, machine parts, nuts, bolts and precision components.
+      Excellent for controlled blasting where operator inserts hands via gloves for safe operation.
+    </p>
+    <img src="Images/sandblasting-cabinet.jpg" alt="Sandblasting cabinet">
   </div>
 
+  <!-- 5: Pipe Blasting Equipment -->
   <div class="tool-card">
-    <h2>Blasting PPE & Breathing System</h2>
-    <p>Operator safety for continuous blasting operation.</p>
-    <ul>
-      <li>Blasting helmet & cape</li>
-      <li>Fresh air breathing system with filter</li>
-      <li>Ear protection, gloves & safety boots</li>
-      <li>Blast suit / apron</li>
-    </ul>
+    <h2>5. Pipe Blasting Equipment</h2>
+    <p>
+      Tools designed for internal & external pipe blasting including rotating pipe heads, pipe spinners and
+      multi-diameter blast attachments. Common in pipeline maintenance, refinery shutdown & offshore projects.
+    </p>
+    <img src="Images/pipe-blasting.jpg" alt="Pipe blasting equipment">
   </div>
 
+  <!-- 6: PPE for Blasting -->
   <div class="tool-card">
-    <h2>Blasting Control & Monitoring</h2>
-    <p>Support tools used to control air & pressure during blasting.</p>
-    <ul>
-      <li>Blasting pressure gauge at pot outlet</li>
-      <li>Moisture trap & air filter</li>
-      <li>Whip check & safety clips</li>
+    <h2>6. Blasting PPE (Air-fed Safety Gear)</h2>
+    <p>
+      Complete protection system for blasters including air-fed helmet, blast suit, leather gloves, steel toe boots,
+      and breathing air filter. Ensures operator safety from dust, abrasive rebound and contaminants.
+    </p>
+    <img src="Images/ppe-blasting.jpg" alt="Blasting PPE">
+  </div>
+
+  <!-- 7: Dustless Blasting -->
+  <div class="tool-card">
+    <h2>7. Dustless Blasting Machines</h2>
+    <p>
+      Wet-blasting machines that mix water with abrasive to reduce dust up to 80%. Suitable for city work,
+      environmental restrictions, and sensitive surroundings such as plants and refineries.
+    </p>
+    <img src="Images/dustless-blasting.jpg" alt="Dustless blasting machine">
+  </div>
+
+  <!-- 8: Vacuum Recovery Systems -->
+  <div class="tool-card">
+    <h2>8. Vacuum Recovery Systems</h2>
+    <p>
+      High-powered industrial vacuums used to recover spent abrasives, dust and debris. Ensures clean surface
+      and allows reusing abrasives in large projects.
+    </p>
+    <img src="Images/vacuum-recovery.jpg" alt="Vacuum recovery system">
+  </div>
+
+  <!-- 9: Abrasive Recycling System -->
+  <div class="tool-card">
+    <h2>9. Abrasive Recycling Systems</h2>
+    <p>
+      Automatically recovers & cleans reusable abrasive by removing dust, rust, paint chips and contaminants.
+      Significantly reduces abrasive consumption & improves blasting efficiency.
+    </p>
+    <img src="Images/abrasive-recycle.jpg" alt="Abrasive recycling system">
+  </div>
+
+  <!-- 10: Robotic Blasting -->
+  <div class="tool-card">
+    <h2>10. Robotic Blasting</h2>
+    <p>
+      Automated robotic blasting machines used for uniform blasting inside tanks, vessels and complex structures.
+      Provides unmatched productivity, accuracy & operator safety.
+    </p>
+    <img src="Images/robotic-blasting.jpg" alt="Robotic blasting system">
+  </div>
+
+  <!-- 11: Air Treatment Units -->
+  <div class="tool-card">
+    <h2>11. Air Treatment Systems</h2>
+    <p>
+      Includes air dryers, moisture separators, filters and aftercoolers. Provides clean, dry and moisture-free air
+      ensuring efficient blasting and long equipment life.
+    </p>
+    <img src="Images/air-treatment.jpg" alt="Air treatment system">
+  </div>
+
+  <!-- 12: Blasting Dust Collectors -->
+  <div class="tool-card">
+    <h2>12. Blasting Dust Collectors</h2>
+    <p>
+      Dust collectors remove airborne dust from blast rooms & job sites. Improves visibility, operator safety &
+      environmental compliance (OSHA/ISO).
+    </p>
+    <img src="Images/dust-collector.jpg" alt="Blasting dust collector">
+  </div>
+
+    <!-- 13: Auto Shot Blasting Machine -->
+  <div class="tool-card">
+    <h2>13. Auto Shot Blasting Machine</h2>
+    <p>
+      Automatic shot blasting machines use high-speed rotating blast wheels to project steel shots 
+      onto the surface, achieving uniform cleaning and surface roughness. These machines are fully 
+      enclosed and ideal for plate blasting, H-beams, structural steel, fabrications, pipes, and 
+      heavy industrial components. They provide consistent profile, high productivity and minimal 
+      abrasive loss due to built-in recycling systems.
+    </p>
+    <p>
+      Auto shot blasting machines are widely used in fabrication workshops, shipyards, steel mills, 
+      bridge construction projects and manufacturing plants where large-volume blasting is required.
+    </p>
+    <ul style="color:#b0b7c8; padding-left:18px; font-size:0.9rem;">
+      <li>Wheel-type turbine blasting system</li>
+      <li>Continuous roller conveyor or hanger-type movement</li>
+      <li>In-built abrasive recycling & magnetic separation</li>
+      <li>Dust collector and high-capacity extraction system</li>
+      <li>Uniform SA 2½ / SA 3 surface preparation</li>
     </ul>
+    <img src="Images/auto-shot-blasting.jpg" alt="Auto shot blasting machine">
   </div>
 
 </body>
