--- a/painting-tools.html
+++ b/painting-tools.html
@@ -140,12 +140,16 @@
       box-shadow: 0 16px 40px rgba(15, 23, 42, 0.14);
     }
 
-    .card img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-      display: block;
-    }
+  .card img {
+  width: 100%;
+  height: auto;
+  max-height: 280px;
+  object-fit: contain;
+  background: #f2f3f5;
+  padding: 10px;
+  border-radius: 8px;
+  display: block;
+}
 
     .card-content {
       padding: 16px 18px 18px;
