--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#resume">Resume</a></li>
-          <li><a href="tools.html">Tools</a></li>
+          <li><a href="tools.html">All Tools</a></li>
           <li><a href="#contact" class="btn">Hire Me</a></li>
         </ul>
       </nav>
@@ -1021,5 +1021,6 @@
   </script>
 </body>
 </html>
+
 
 
