--- a/index.html
+++ b/index.html
@@ -783,6 +783,97 @@
       </div>
     </section>
 
+    <!-- ========================= -->
+<!-- TOOLS SUMMARY MAIN BLOCK -->
+<!-- ========================= -->
+<section id="tools-summary" style="padding:50px 0; margin-top:40px;">
+  <h2 style="text-align:center; color:#38bdf8; margin-bottom:10px;">
+    Tools & Equipment Expertise
+  </h2>
+
+  <p style="text-align:center; max-width:750px; margin:0 auto; color:#94a3b8; font-size:1.05rem;">
+    Complete professional capability in Inspection Instruments, Blasting Equipment 
+    and Airless Spray Painting Systems used in industrial coating projects.
+  </p>
+
+  <div style="
+    display:flex;
+    justify-content:center;
+    gap:25px;
+    flex-wrap:wrap;
+    margin-top:35px;
+  ">
+    <!-- 1. Inspection Tools Summary -->
+    <div style="
+      background:#0b1120;
+      padding:22px;
+      border-radius:12px;
+      width:300px;
+      border:1px solid #1e293b;
+      text-align:center;
+      box-shadow:0 4px 16px rgba(0,0,0,0.4);
+    ">
+      <img src="Images/dft-gauge.jpg" style="width:100%; border-radius:10px;" alt="Inspection Tools">
+      <h3 style="color:#38bdf8; margin-top:12px;">Inspection Tools</h3>
+      <p style="color:#9ca3af; font-size:0.9rem;">
+        DFT gauge, Holiday detector, Adhesion tester, Dew point meter, Bresle kit & more.
+      </p>
+      <a href="inspection.html"
+         style="display:inline-block; margin-top:10px;
+         background:#38bdf8; color:#0b1120;
+         padding:10px 20px; border-radius:8px; text-decoration:none; font-weight:600;">
+         View Details →
+      </a>
+    </div>
+
+    <!-- 2. Blasting Tools Summary -->
+    <div style="
+      background:#0b1120;
+      padding:22px;
+      border-radius:12px;
+      width:300px;
+      border:1px solid #1e293b;
+      text-align:center;
+      box-shadow:0 4px 16px rgba(0,0,0,0.4);
+    ">
+      <img src="Images/blast-machine.jpg" style="width:100%; border-radius:10px;" alt="Blasting Tools">
+      <h3 style="color:#38bdf8; margin-top:12px;">Blasting Tools</h3>
+      <p style="color:#9ca3af; font-size:0.9rem;">
+        Blasting machines, dust collectors, PPE, recyclers, pipe blasters, auto shot blasting & more.
+      </p>
+      <a href="blasting-tools.html"
+         style="display:inline-block; margin-top:10px;
+         background:#38bdf8; color:#0b1120;
+         padding:10px 20px; border-radius:8px; text-decoration:none; font-weight:600;">
+         View Details →
+      </a>
+    </div>
+
+    <!-- 3. Painting / Airless Spray Tools Summary -->
+    <div style="
+      background:#0b1120;
+      padding:22px;
+      border-radius:12px;
+      width:300px;
+      border:1px solid #1e293b;
+      text-align:center;
+      box-shadow:0 4px 16px rgba(0,0,0,0.4);
+    ">
+      <img src="Images/graco-king.jpg" style="width:100%; border-radius:10px;" alt="Airless Spray Tools">
+      <h3 style="color:#38bdf8; margin-top:12px;">Airless Spray Tools</h3>
+      <p style="color:#9ca3af; font-size:0.9rem;">
+        Airless pumps, spray guns, hoses, filters, tips, agitators & full spray system checks.
+      </p>
+      <a href="painting-tools.html"
+         style="display:inline-block; margin-top:10px;
+         background:#38bdf8; color:#0b1120;
+         padding:10px 20px; border-radius:8px; text-decoration:none; font-weight:600;">
+         View Details →
+      </a>
+    </div>
+  </div>
+</section>
+
     <!-- GALLERY -->
     <section id="gallery">
       <div class="section-title">Inspection Gallery</div>
@@ -1021,6 +1112,7 @@
   </script>
 </body>
 </html>
+
 
 
 
