--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
       text-align:center;
       box-shadow:0 4px 16px rgba(0,0,0,0.4);
     ">
-      <img src="Images/dft-gauge.jpg" style="width:100%; border-radius:10px;" alt="Inspection Tools">
+      <img src="Images/elcometer-456.jpg" style="width:100%; border-radius:10px;" alt="Inspection Tools">
       <h3 style="color:#38bdf8; margin-top:12px;">Inspection Tools</h3>
       <p style="color:#9ca3af; font-size:0.9rem;">
         DFT gauge, Holiday detector, Adhesion tester, Dew point meter, Bresle kit & more.
@@ -1112,6 +1112,7 @@
   </script>
 </body>
 </html>
+
 
 
 
