--- a/index.html
+++ b/index.html
@@ -369,15 +369,20 @@
       ============================ */
 
   /* ABOUT – DFT meter / inspection close shot */
-  #about{
-    background-image:
-      linear-gradient(135deg,rgba(7,23,40,0.96),rgba(9,36,59,0.97),rgba(5,15,30,0.98)),
-      url('Images/backgrounds/about-dft-meter.jpg');
-    background-size:cover;
-    background-position:center;
-    background-repeat:no-repeat;
-    background-blend-mode:overlay;
-  }
+ #about{
+  background-image:
+    linear-gradient(
+      135deg,
+      rgba(0,0,0,0.78),
+      rgba(0,0,0,0.82),
+      rgba(0,0,0,0.86)
+    ),
+    url('Images/backgrounds/about-dft-meter.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: normal;
+}
 
   /* EXPERIENCE – steel structure, pipe rack, etc. */
   #experience{
@@ -391,15 +396,20 @@
   }
 
   /* CERTIFICATIONS – clean lab/inspection table */
-  #certifications{
-    background-image:
-      linear-gradient(135deg,rgba(6,20,34,0.97),rgba(8,37,56,0.98),rgba(3,11,22,0.98)),
-      url('Images/backgrounds/cert-lab-table.jpg');
-    background-size:cover;
-    background-position:center;
-    background-repeat:no-repeat;
-    background-blend-mode:overlay;
-  }
+#certifications{
+  background-image:
+    linear-gradient(
+      135deg,
+      rgba(0,0,0,0.80),
+      rgba(0,0,0,0.84),
+      rgba(0,0,0,0.88)
+    ),
+    url('Images/backgrounds/certifications.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: normal;   /* আগে overlay থাকলে এটা করো */
+}
 
   /* PROJECTS – site / plant wide angle */
   #projects{
@@ -1112,6 +1122,7 @@
   </script>
 </body>
 </html>
+
 
 
 
